# Scince-

Obuch2i-NLP-main/: Dockerfile  README.md  pyproject.toml
Obuch2i-NLP-main/experiments/001-model_comparison/: 001-dataset.ipynb  002-language_tool_python.ipynb  003-hunspell.ipynb  004-yandex_speller.ipynb  005-transformers.ipynb  006-get_tranformer_confidence.ipynb  007-chatgpt.ipynb  README.md  model_list.csv
Obuch2i-NLP-main/experiments/001-model_comparison/src/: base.py  datasets.py  model_scorers.py
Obuch2i-NLP-main/src/: README.md
Obuch2i-NLP-main/src/basemodels/cv_models/: base.py
Obuch2i-NLP-main/src/basemodels/nlp_models/: base.py
Obuch2i-NLP-main/src/cv_utils/: utils.py
Obuch2i-NLP-main/src/loggers/: basic_logger.py
Obuch2i-NLP-main/src/ml_models/: nlp_pipeline.py
Obuch2i-NLP-main/src/ml_models/cv_models/: yandex_vision_ocr.py
Obuch2i-NLP-main/src/ml_models/nlp_models/: pylanguagetool.py  transformers.py  yandex_speller.py
Obuch2i-NLP-main/src/pipeline_init/: united_pipeline.py  united_pipeline_test.py
Obuch2i-NLP-main/src/server/: main.py
Obuch2i-NLP-main/src/server/models/: cv_basemodels.py  nlp_basemodels.py
Obuch2i-NLP-main/src/server/routers/cv_routers/: yandex_vision_ocr_router.py
Obuch2i-NLP-main/tests/loggers/: test_basic_logger.py
Obuch2i-NLP-main/tests/ml_models/cv_models/: test_yandex_vision_ocr.py
Obuch2i-NLP-main/tests/ml_models/nlp_models/: test_pylanguagetool.py  test_transformers.py  test_yandex_speller.py
Obuch2i-NLP-main/tests/server/routers/: test_yandex_speller_router.py
Obuch2i-main/: CRNN_Model.ipynb  (+9 more)
(+3 files in other folders)
